# BS2Cypress

./: CMakeLists.txt  README.md  setup_includes.sh
backend/: brainscales.cpp  brainscales.hpp
cmake/: cypress_external.cmake
test/: CMakeLists.txt  test_brainscales.cpp
